docs/pages/versions/v57.0.0/sdk/ui/jetpack-compose/basicalertdialog.mdx
---
title: BasicAlertDialog
description: A Jetpack Compose BasicAlertDialog component for displaying dialogs with custom content.
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-57/packages/expo-ui'
packageName: '@expo/ui'
platforms: ['android', 'expo-go']
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import { ComponentExample } from '~/ui/components/ComponentExample';
import { ContentSpotlight } from '~/ui/components/ContentSpotlight';

Expo UI BasicAlertDialog matches the official Jetpack Compose [BasicAlertDialog](https://developer.android.com/develop/ui/compose/components/dialog) API and displays a minimal dialog that accepts custom children as its content, giving you full control over the dialog layout.

<ContentSpotlight
  variant="component"
  aspect="landscape"
  src="/static/images/expo-ui/basicalertdialog/android-light.webp"
  darkSrc="/static/images/expo-ui/basicalertdialog/android-dark.webp"
  alt="Material 3 basic alert dialog with custom content"
/>

## Installation

<APIInstallSection />

## Usage

### Basic dialog with custom content

<ComponentExample
  title="BasicAlertDialogExample.tsx"
  src="/static/images/expo-ui/examples/basicalertdialog-custom-content-android-light.webp"
  darkSrc="/static/images/expo-ui/examples/basicalertdialog-custom-content-android-dark.webp"
  alt="A dialog holding custom content: supportive text with a Confirm button at the trailing edge">

```tsx
import { useState } from 'react';
import {
  Host,
  BasicAlertDialog,
  Button,
  TextButton,
  Text,
  Surface,
  Column,
  Spacer,
} from '@expo/ui/jetpack-compose';
import {
  padding,
  wrapContentWidth,
  wrapContentHeight,
  clip,
  height,
  align,
  Shapes,
} from '@expo/ui/jetpack-compose/modifiers';

export default function BasicAlertDialogExample() {
  const [visible, setVisible] = useState(false);

  return (
    <Host matchContents>
      <Button onClick={() => setVisible(true)}>
        <Text>Open dialog</Text>
      </Button>
      {visible && (
        <BasicAlertDialog
          onDismissRequest={() => setVisible(false)}>
          <Surface
            tonalElevation={6}
            modifiers={[
              wrapContentWidth(),
              wrapContentHeight(),
              clip(Shapes.RoundedCorner(28)),
            ]}>
            <Column modifiers={[padding(16, 16, 16, 16)]}>
              <Text>
                This area typically contains the supportive text
                which presents the details regarding the Dialog's
                purpose.
              </Text>
              <Spacer modifiers={[height(24)]} />
              <TextButton
                onClick={() => setVisible(false)}
                modifiers={[align('end')]}>
                <Text>Confirm</Text>
              </TextButton>
            </Column>
          </Surface>
        </BasicAlertDialog>
      )}
    </Host>
  );
}
```

</ComponentExample>

## API

```tsx
import { BasicAlertDialog } from '@expo/ui/jetpack-compose';
```

<APISection
  packageName="expo-ui/jetpack-compose/basicalertdialog"
  apiName="BasicAlertDialog"
/>
